# dig-options

./: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml  release.yml
src/: clawback.rs  create.rs  error.rs  exercise.rs  hydrate.rs  lib.rs  rehydrate.rs  sign.rs  transfer.rs  types.rs
tests/: lifecycle.rs
