# dig-options — the DIG Network canonical Chia option-contract expert crate.
#
# A pure, key-free, network-free CoinSpend-builder library for Chia covered options (CHIP-0042).
# dig-options constructs the exact CoinSpends for the option lifecycle — create (lock an underlying,
# mint the option singleton), exercise (pay the strike, unlock the underlying), clawback/cancel
# (reclaim the underlying on expiry), and inspect (reconstruct an option from its coin) — and reports
# the exact signatures a caller must produce. It NEVER holds a secret key, NEVER signs, and NEVER
# touches the network. The consumer signs the reported messages, assembles the SpendBundle, and
# broadcasts. See SPEC.md for the normative contract.
#
# This is the v0.0.0 bootstrap: it establishes the crate, the release/quality pipeline, and proves
# the pinned chia-wallet-sdk 0.30 dependency tree resolves + compiles. The complete option builder
# surface (create / exercise / clawback / inspect over XCH + CAT + NFT underlyings and strikes) lands
# as v0.1.0 in a single triple-gated feature PR against this foundation.
[package]
name = "dig-options"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0 OR MIT"
description = "The DIG Network canonical Chia option-contract (CHIP-0042) expert crate: a pure, key-free, network-free CoinSpend-builder for covered options — create, exercise, clawback/cancel, inspect. Never holds a key, never signs, never broadcasts — the consumer signs + pushes."
repository = "https://github.com/DIG-Network/dig-options"
readme = "README.md"
keywords = ["dig", "chia", "option", "derivative", "singleton"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]

[dependencies]
# The chia-wallet-sdk umbrella is the byte-source-of-truth for every option puzzle, layer, and spend.
# Pinned to the 0.30 family the whole DIG on-chain line rides (chia-protocol 0.26). We consume the
# OptionLauncher / OptionContract / OptionUnderlying primitives, the standard p2 layer, the spend
# context, and the pure required-signature calculator through it so the chia-* tree resolves to ONE
# coherent version set.
chia-wallet-sdk = "0.30"
# Direct type deps, pinned to EXACTLY the versions chia-wallet-sdk 0.30 resolves to (a mismatch is a
# hard cargo error). chia-protocol carries wire types (`Coin`, `CoinSpend`, `Bytes32`, `Program`).
chia-protocol = "0.26"
# `Memos` + the offer `SettlementPaymentsSolution` used to build the exercise strike-payment leg.
chia-puzzle-types = "0.26"
# `SETTLEMENT_PAYMENT_HASH` — the settlement puzzle hash the strike payment is paid into.
chia-puzzles = "0.20"
# The CLVM allocator used to run puzzles when computing required signatures (`sign`).
clvmr = "0.14"
# The crate error taxonomy (SPEC §6). thiserror 2 matches the sibling DIG crates.
thiserror = "2"

[dev-dependencies]
# The in-process Chia Simulator + BLS keypair helpers for building + validating real coin spends in
# tests (create -> exercise round-trip, create -> clawback-on-expiry).
chia-sdk-test = "0.30"
anyhow = "1"
